# python-shinkenclient

./: README.md  requirements.txt  setup.cfg  setup.py
python_shinkenclient.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: dbaas.sh  install_eg2_hosts.sh  install_shinken_configs.sh  paas.sh
shinkenclient/common/: exceptions.py
shinkenclient/v1/: __init__.py  host.py
