[metadata]
name = python-shinkenclient
summary = Shinken Command-line Client
description-file =
    README.md
author = Joel
author-email = joel.r.cooklin@intel.com
home-page = http://github.intel.com/jrcookli/python-shinkenclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    shinkenclient

[entry_points]
console_scripts =
    opencloud-mon = shinkenclient.shell:main

opencloud.monitor =
    host list = shinkenclient.v1.host:ListHost
    host create = shinkenclient.v1.host:CreateHost
    host delete = shinkenclient.v1.host:DeleteHost
    host update = shinkenclient.v1.host:UpdateHost
    generic-host create = shinkenclient.v1.host:CreateGenericHost
    hostgroup create = shinkenclient.v1.host:CreateHostGroup
    hostgroup list = shinkenclient.v1.host:ListHostGroup
    hostgroup delete = shinkenclient.v1.host:DeleteHostGroup
    contact list = shinkenclient.v1.contact:ListContact
    contact create = shinkenclient.v1.contact:CreateContact
    contact delete  = shinkenclient.v1.contact:DeleteContact
    contact update = shinkenclient.v1.contact:UpdateContact
    contactgroup list = shinkenclient.v1.contact:ListContactGroup
    contactgroup create = shinkenclient.v1.contact:CreateContactGroup
    contactgroup delete = shinkenclient.v1.contact:DeleteContactGroup
    generic-contact create = shinkenclient.v1.contact:CreateGenericContact
    generic-contact list = shinkenclient.v1.contact:ListGenericContact
    service list = shinkenclient.v1.service:ListService
    service create = shinkenclient.v1.service:CreateService
    service delete = shinkenclient.v1.service:DeleteService
    service update = shinkenclient.v1.service:UpdateService
    generic-service create = shinkenclient.v1.service:CreateGenericService
    generic-service list = shinkenclient.v1.service:ListGenericService
    command list = shinkenclient.v1.command:ListCommand
    command create = shinkenclient.v1.command:CreateCommand
    command delete = shinkenclient.v1.command:DeleteCommand
    command update = shinkenclient.v1.command:UpdateCommand
    reload = shinkenclient.v1.host:ReloadShinken
